Add an agw deploy job with a hold button
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1343,13 +1343,14 @@ workflows:
           <<: *only_master
       - lte-integ-test:
           <<: *master_and_develop
-      - lte-agw-deploy:
-          <<: *only_master
-          requires:
-            - lte-test
-            - mme_test
-            - lte-integ-test
       - c-cpp-codecov
+      - agw-deploy-hold:
+          <<: *only_release
+          type: approval
+      - lte-agw-deploy:
+          <<: *only_release
+          requires:
+          - agw-deploy-hold
 
   release:
     jobs:
