Fix linter errors across orcl
Signed-off-by: Karthik Subraveti <ksubraveti@fb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = 
+ignore =
     W503, # line break before binary operator
     # wemake-python-styleguide warnings
     WPS102, # Found incorrect module name pattern
@@ -17,6 +17,7 @@ ignore =
     WPS217, # Found too many await expressions
     WPS226, # Found string constant over-use
     WPS229, # Found too long try body length
+    WPS305, # Found `f` string
     WPS317, # Found incorrect multi-line parameters
     WPS318, # Found extra indentation
     WPS319, # Found bracket in wrong position
@@ -41,7 +42,7 @@ ignore =
 per-file-ignores =
     lte/gateway/python/integ_tests/s1aptests/*.py: WPS118, WPS219
 # WPS118: Found too deep access level
-# WPS219: Found too long name 
+# WPS219: Found too long name
 
 [isort]
 profile=wemake
