--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -965,10 +965,13 @@ jobs:
       #- aws-cli/setup
       - run:
           command: |
+            pip install wheel
+            pip install ansible 
+            pip install awscli
+            pip install boto3
             echo export AWS_DEFAULT_REGION="us-west-1" >> $BASH_ENV
             echo export AWS_ACCESS_KEY_ID="$(printenv AWS_FB_CRED)" >> $BASH_ENV
             echo export AWS_SECRET_ACCESS_KEY="$(printenv AWS_FB_SECRET)" >> $BASH_ENV
-            pip install wheel ansible awscli boto3
             mkdir ~/magma-experimental
             mkdir ~/magma-experimental/files
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
