--- a/orc8r/lib/go/protos/Makefile
+++ b/orc8r/lib/go/protos/Makefile
@@ -9,7 +9,8 @@ gen::
 	go generate ./...
 
 test::
-	go test ./...
+	$(eval NAME ?= $(shell pwd | tr / _))
+	gotestsum --junitfile $(TEST_RESULTS_DIR)/$(NAME).xml
 
 vet::
 	go vet -composites=false ./...
