--- a/orc8r/cloud/deploy/bare-metal-ansible/ansible_vars.yaml
+++ b/orc8r/cloud/deploy/bare-metal-ansible/ansible_vars.yaml
@@ -52,8 +52,8 @@ kubelet_cgroup_driver: systemd
 # orc8r_domain:
 # orc8r_nms_admin_email:
 
-# Component versions
-# orc8r_chart_version: 1.3.x
+# Component versions (orc8r 1.3.x or 1.4.x supported)
+# orc8r_chart_version: 1.4.x
 # orc8r_image_tag: 1.3.x
 # orc8r_nms_image_tag: 1.3.x
 # orc8r_nginx_image_tag: 1.3.x
