--- a/orc8r/cloud/deploy/bare-metal-ansible/deploy-magma-infra.yml
+++ b/orc8r/cloud/deploy/bare-metal-ansible/deploy-magma-infra.yml
@@ -2,10 +2,7 @@
   become: yes
   become_user: root
   roles:
-    - role: magma/nfs-server-provisioner
-      when: deploy_nfs_server_provisioner | default(True)
-    - role: magma/kubevirt
-      when: kubevirt_enabled | default(False)
-    - role: magma/metallb
-      when: deploy_metallb | default(True)
+    - magma/nfs-server-provisioner
+    - magma/kubevirt
+    - magma/metallb
 
