--- a/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/orc8r/files/orc8r-configs.yaml
+++ b/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/orc8r/files/orc8r-configs.yaml
@@ -11,6 +11,7 @@ stringData:
     prometheusConfigServiceURL: "http://orc8r-prometheus-configurer:9100"
     alertmanagerConfigServiceURL: "http://orc8r-alertmanager-configurer:9101"
   orchestrator.yml: |
+    prometheusGRPCPushAddress: "orc8r-prometheus-cache:9092"
     prometheusPushAddresses:
       - "http://orc8r-prometheus-cache:9091/metrics"
   elastic.yml: |
