[feg] fix more lint issues
Signed-off-by: Oriol Batalla <obatalla@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -660,7 +660,7 @@ jobs:
          command: go mod download
          workdir: ${MAGMA_ROOT}/cwf/gateway
       - run:
-          name: GO lint code
+          name: Go lint code
           command: |
             cd ${MAGMA_ROOT}/feg/gateway
             make -C ${MAGMA_ROOT}/feg/gateway lint
