--- a/feg/gateway/Makefile
+++ b/feg/gateway/Makefile
@@ -5,7 +5,8 @@ MAGMA_ROOT = /home/$USER/magma
 endif
 export MAGMA_ROOT
 
-COVER_DIR := $(MAGMA_ROOT)/feg/gateway/coverage
+COVER_DIR:=$(MAGMA_ROOT)/feg/gateway/coverage
+COVER_FILE:=$(COVER_DIR)/feg.gocov
 export COVER_DIR
 
 
@@ -52,8 +53,14 @@ gen:
 vet:
 	go vet ./...
 
-lint:
-	golint -min_confidence 1. ./...
+lint: lint_tools
+	golangci-lint run
+
+lint_tools:
+	if which golangci-lint 2>/dev/null; then echo "-> golangci-lint already installed"; \
+	else curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh \
+			| sudo sh -s -- -b /usr/sbin/ v1.35.2; \
+	fi
 
 build_only:
 	go build ./...
@@ -63,6 +70,14 @@ run_local_hss:
 
 precommit: fmt test vet
 
+cover: tools
+	mkdir -p $(COVER_DIR)
+	go-acc ./... --covermode count --output $(COVER_FILE)
+	# skip some unnecessary files for coverage
+	awk '!/\.pb\.go|_swaggergen\.go|\/mocks\/|\/tools\/|\/blobstore\/ent\//' $(COVER_FILE) > $(COVER_FILE).tmp && \
+		mv $(COVER_FILE).tmp $(COVER_FILE)
+
+# Tool dependencies
 TOOL_DEPS:= \
 	github.com/ory/go-acc \
 	github.com/wadey/gocovmerge
@@ -70,12 +85,4 @@ tools:: $(TOOL_DEPS)
 $(TOOL_DEPS): %:
 	go install $*
 
-cover: tools cover_pre
 
-COVER_FILE=$(COVER_DIR)/feg.gocov
-cover: tools cover_pre
-	go-acc ./... --covermode count --output $(COVER_FILE)
-	# skip some unnecessary files for coverage
-	awk '!/\.pb\.go|_swaggergen\.go|\/mocks\/|\/tools\/|\/blobstore\/ent\//' $(COVER_FILE) > $(COVER_FILE).tmp && mv $(COVER_FILE).tmp $(COVER_FILE)
-cover_pre:
-	mkdir -p $(COVER_DIR)
