Upload feg test results (#6400)
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -696,6 +696,8 @@ jobs:
           command: |
             cd ${MAGMA_ROOT}/feg/gateway
             make -C ${MAGMA_ROOT}/feg/gateway precommit
+      - store_test_results:
+          path: /tmp/test-results
       - magma_slack_notify
 
   feg-build:
