--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -970,18 +970,18 @@ jobs:
             pip install awscli
             pip install boto3
             echo export AWS_DEFAULT_REGION="us-west-1" >> $BASH_ENV
-            echo export AWS_ACCESS_KEY_ID="$(printenv AWS_FB_CRED)" >> $BASH_ENV
-            echo export AWS_SECRET_ACCESS_KEY="$(printenv AWS_FB_SECRET)" >> $BASH_ENV
+            echo export AWS_ACCESS_KEY_ID="$(printenv MANTLE_DEV_ACCESS)" >> $BASH_ENV
+            echo export AWS_SECRET_ACCESS_KEY="$(printenv MANTLE_DEV_SECRET)" >> $BASH_ENV
             mkdir ~/magma-experimental
             mkdir ~/magma-experimental/files
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
             cp -r * ~/magma-experimental
             cp ~/magma-experimental/roles/vars/secrets.yaml ~/magma-experimental/files
-            ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
-            ansible-playbook build-provision.yaml --tags devopsAgw,inventory  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
-            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
-            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
-            ansible-playbook ami-init.yaml  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
+            ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
+            ansible-playbook build-provision.yaml --tags devopsAgw,inventory  -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
+            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"  -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
+            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin  -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
+            ansible-playbook ami-init.yaml  -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
 #      - magma_slack_notify
 
   ## CWF OPERATOR
