--- a/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
+++ b/lte/gateway/deploy/roles/ovs_deploy/vars/all.yaml
@@ -23,13 +23,13 @@ ovs_build_config:
     - "openvswitch-common_2.8.10-1_amd64.deb"
     - "openvswitch-switch_2.8.10-1_amd64.deb"
 
-ovs_pkgrepo_proto: http
-ovs_pkgrepo_host: packages.magma.etagecom.io
+ovs_pkgrepo_proto: https
+ovs_pkgrepo_host: artifactory.magmacore.org/artifactory/debian
 ovs_pkgrepo_path: ""
-ovs_pkgrepo_dist: stretch-1.4.0
+ovs_pkgrepo_dist: stretch-1.5.0
 ovs_pkgrepo_component: main
-ovs_pkgrepo_name: "ovs_package_repo"
+ovs_pkgrepo_name: "magma"
 
-ovs_pkgrepo_key: "http://packages.magma.etagecom.io/pubkey.gpg"
+ovs_pkgrepo_key: "https://artifactory.magmacore.org/artifactory/api/gpg/key/public"
 ovs_pkgrepo_key_fingerprint: ""
 ovs_use_pkgrepo: yes
