--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -977,8 +977,8 @@ jobs:
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
             cp -r * ~/magma-experimental
             cp ~/magma-experimental/roles/vars/secrets.yaml ~/magma-experimental/files
-            sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" files/secrets.yaml
-            sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" files/secrets.yaml
+            sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" ~/magma-experimental/files/secrets.yaml
+            sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" ~/magma-experimental/files/secrets.yaml
             ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
             ansible-playbook build-provision.yaml --tags devopsAgw,inventory  -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
             ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"  -e "awsAccessKey: $MANTLE_DEV_ACCESS" -e "awsSecretKey: $MANTLE_DEV_SECRET"
