AGW: Non-NAT: configure SGi as a router
Non-NAT Bridged mode configuration can be complicated in production
environment. Following patch adds support for adding SGi as
a router along with bridged mode for UE traffic.

Signed-off-by: Pravin B Shelar <pbshelar@fb.com>

--- a/lte/gateway/configs/pipelined.yml
+++ b/lte/gateway/configs/pipelined.yml
@@ -159,6 +159,7 @@ ovs_uplink_port_name: patch-up
 uplink_bridge: uplink_br0
 uplink_eth_port_name: uplink_p0
 uplink_gw_mac: 'ff:ff:ff:ff:ff:ff'
+dp_router_enabled: true
 
 ovs_gtp_stats_polling_interval: 180
 
