--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -29,7 +29,7 @@ lte/gateway/c/connection_tracker @koolzz
 lte/gateway/docker @rdefosse @tmdzk
 lte/gateway/release @tmdzk
 lte/gateway/python/magma/pipelined @koolzz @pshelar
-lte/gateway/python/integ_tests @ssanadhya @ulaskozat
+lte/gateway/python/integ_tests @ssanadhya @ulaskozat @ardzoht
 lte/gateway/Vagrantfile @mattymo @119Vik @tmdzk
 
 **/*.pb.go @magma/entire-org
@@ -40,5 +40,7 @@ xwf/ @AyliD @aharonnovo @r-i-g
 feg/radius @AyliD @aharonnovo @r-i-g @themarwhal @mpgermano @uri200 @emakeev
 
 nms/ @karthiksubraveti @andreilee @HannaFar
+
+docs/readmes/proposals @electronjoe
 
 CODEOWNERS @amarpad @electronjoe
