--- a/feg/gateway/docker/docker-compose.yml
+++ b/feg/gateway/docker/docker-compose.yml
@@ -30,17 +30,21 @@ x-generic-service: &service
   restart: always
   network_mode: host
 
-# Use generic python anchor to avoid repetition for python services
+# Use generic anchor to defined dependencie on td-agent-bit container
+  x-log-forward: &depends_on_logs
+  depends_on:
+    td-agent-bit:
+      condition: service_healthy
+
 # Use generic python anchor to avoid repetition for python services
 x-pyservice_base: &pyservice_base
   <<: *service
   image: ${DOCKER_REGISTRY}gateway_python:${IMAGE_VERSION}
-  
+
 # Use generic python anchor with logging capabilities to avoid repetition for python services
 x-pyservice: &pyservice
   <<: *pyservice_base
   <<: *depends_on_logs
-
 
 # Use generic go anchor to avoid repetition for go services
 x-goservice: &goservice
@@ -48,10 +52,6 @@ x-goservice: &goservice
   <<: *depends_on_logs
   image: ${DOCKER_REGISTRY}gateway_go:${IMAGE_VERSION}
 
-x-log-forward: &depends_on_logs
-  depends_on:
-    td-agent-bit:
-      condition: service_healthy
 
 services:
   csfb:
