Cloudstrapper upgrades for 1.5
Signed-off-by: Arun Thulasi <arunt@fb.com>

--- a/experimental/cloudstrapper/playbooks/roles/build-platform/tasks/magma-repo.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/build-platform/tasks/magma-repo.yaml
@@ -2,12 +2,11 @@
 
 - name: create magma directory
   file:
-    path: "{{ dirSourceLocal }}"
+    path: "{{ dirLocalInventory }}/magma"
     state: directory
 
 - name: download github repo
   git:
     repo: "{{ buildMagmaRepo }}"
-    dest: "{{ dirSourceLocal }}"
+    dest: "{{ dirLocalInventory }}/magma"
     version: "{{ buildMagmaVersion }}"
-
