--- a/experimental/cloudstrapper/playbooks/agw-provision.yaml
+++ b/experimental/cloudstrapper/playbooks/agw-provision.yaml
@@ -5,10 +5,10 @@
     - { role: aws-inventory, tags: inventory }
   vars_files:
     - roles/vars/defaults.yaml
-    - "{{ dirInventory }}/secrets.yaml"
+    - roles/vars/build.yaml
+    - "{{ dirLocalInventory }}/secrets.yaml"
     - roles/vars/cluster.yaml
     - "roles/agw-infra/vars/varSite{{ idSite }}.yaml"
-    - "roles/agw-infra/vars/varGateway{{ idSite }}{{ idGw }}.yaml"
   environment:
     AWS_ACCESS_KEY_ID: "{{ awsAccessKey }}"
     AWS_SECRET_ACCESS_KEY: "{{ awsSecretKey }}"
