--- a/experimental/cloudstrapper/playbooks/cluster-provision.yaml
+++ b/experimental/cloudstrapper/playbooks/cluster-provision.yaml
@@ -1,14 +1,13 @@
 ---
-
-- hosts: "{{ agw }}"
+- hosts: localhost
   roles:
-    - agw-platform
-  vars:
-    ansible_ssh_private_key_file: "{{ dirLocalInventory }}/{{ keyHost }}.pem"
+    - {role: test-framework}
   vars_files:
     - roles/vars/defaults.yaml
-    - roles/vars/cluster.yaml
+    - roles/vars/build.yaml
     - "{{ dirLocalInventory }}/secrets.yaml"
+    - roles/vars/cluster.yaml
+    - "roles/agw-infra/vars/varSite{{ idSite }}.yaml"
   environment:
     AWS_ACCESS_KEY_ID: "{{ awsAccessKey }}"
     AWS_SECRET_ACCESS_KEY: "{{ awsSecretKey }}"
