--- a/experimental/cloudstrapper/playbooks/roles/aws-essentials/tasks/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/aws-essentials/tasks/main.yaml
@@ -1,51 +1,53 @@
 ---
-#aws-essentials setup up aws prerequisite resources
-#common magma s3 bucket to store and retrive objects
-#common magma security group that all instances will use. 
-#common magma ssh keypair that will be embedded in all hosts
-#common magma ssh keypair that will be embedded in bootstrap only
+# aws-essentials setup up aws prerequisite resources
+# common magma s3 bucket to store and retrieve objects
+# common magma security group that all instances will use.
+# common magma ssh keypair that will be embedded in all hosts
+# common magma ssh keypair that will be embedded in bootstrap only
 
 - name: allocate keyBoot
   ec2_key:
     name: "{{ keyBoot }}"
   register: keyboot_val
-  tags: [ never, keyCreate ]
+  tags: [never, keyCreate]
 
 - name: copy .pem file
-  copy: 
-    content: "{{ keyboot_val.key.private_key }}" 
+  copy:
+    content: "{{ keyboot_val.key.private_key }}"
     dest: "{{ dirLocalInventory }}/{{ keyBoot }}.pem"
     mode: 0600
   when: keyboot_val.changed
-  tags: [ never, keyCreate ]
+  tags: [never, keyCreate]
 
 - name: allocate keyHost
   ec2_key:
     name: "{{ keyHost }}"
   register: keyhost_val
-  tags: [ never, keyCreate ]
+  tags: [never, keyCreate]
 
 - name: copy .pem file
-  copy: 
-    content: "{{ keyhost_val.key.private_key }}" 
+  copy:
+    content: "{{ keyhost_val.key.private_key }}"
     dest: "{{ dirLocalInventory }}/{{ keyHost }}.pem"
     mode: 0600
   when: keyhost_val.changed
-  tags: [ never, keyCreate ]
+  tags: [never, keyCreate]
 
 - name: find vpc id of default gateway for bootstrap
   ec2_vpc_net_info:
     filters:
       "isDefault": "true"
   register: return_val
+  tags: [essentialsCreate]
 
 - name: assign vpc id to variable
-  set_fact: 
+  set_fact:
     factVpcId: "{{ return_val.vpcs[0].vpc_id }}"
+  tags: [essentialsCreate]
 
-- name: create other aws resources 
-  cloudformation: 
-    stack_name: "stackMantleEssentials"
+- name: create other aws resources
+  cloudformation:
+    stack_name: "{{ stackEssentialsDefault }}"
     state: "present"
     region: "{{ awsAgwRegion }}"
     disable_rollback: true
@@ -54,3 +56,4 @@
       paramVpcDefault: "{{ factVpcId }}"
       paramSecgroupMagmaDefault: "{{ secgroupDefault }}"
       paramBucketMagmaDefault: "{{ bucketDefault }}"
+  tags: [essentialsCreate]
