--- a/experimental/cloudstrapper/playbooks/roles/test-framework/tasks/provision-gateway-instance.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/test-framework/tasks/provision-gateway-instance.yaml
@@ -1,9 +1,4 @@
 ---
-- name: check if gateway name is defined
-  assert:
-    that:
-      - idGw is defined
-
 - name: identify sgi subnet id using tag
   ec2_vpc_subnet_info:
     filters:
@@ -34,37 +29,19 @@
   set_fact:
     factSecGroup: "{{ valSecGroup.security_groups[0].group_id }}"
 
-
-- name: provision agw base with dual nics for deploy
+- name: provision test cluster gateway with dual nics
   cloudformation:
-    stack_name: "stack{{ siteName }}{{ idGw }}"
+    stack_name: "stack{{ siteName }}{{ testframeworkGwName }}"
     state: present
     template: "roles/cfn/cfnMagmaAgwPublicDual.json"
     template_parameters:
-      paramImageBase: "{{ awsAgwAmi }}"
+      paramImageBase: "{{ awsCloudstrapperAmi }}"
       paramSubnetSgi: "{{ factSgiSubnetId }}"
       paramSubnetEnodeb: "{{ factEnodebSubnetId }}"
       paramAzHome: "{{ awsAgwAz }}"
       paramSecGroup: "{{ factSecGroup }}"
       paramSshKey: "{{ awsHostKey }}"
-      paramAgwTagName: "{{ idGw }}"
+      paramAgwTagName: "{{ testframeworkGwName }}"
       paramAgwTagSite: "{{ siteName }}"
-      paramAgwInstanceType: "t2.medium"
-  when: agwDevops is undefined
-
-- name: provision agw base with dual nics for devops
-  cloudformation:
-    stack_name: "stack{{ siteName }}{{ idGw }}"
-    state: present
-    template: "roles/cfn/cfnMagmaAgwPublicDual.json"
-    template_parameters:
-      paramImageBase: "{{ buildUbuntuAmi }}"
-      paramSubnetSgi: "{{ factSgiSubnetId }}"
-      paramSubnetEnodeb: "{{ factEnodebSubnetId }}"
-      paramAzHome: "{{ awsAgwAz }}"
-      paramSecGroup: "{{ factSecGroup }}"
-      paramSshKey: "{{ awsHostKey }}"
-      paramAgwTagName: "{{ idGw }}"
-      paramAgwTagSite: "{{ siteName }}"
-      paramAgwInstanceType: "t2.medium"
-  when: agwDevops is defined
+      paramAgwTagUuid: "{{ clusterUuid }}"
+      paramAgwInstanceType: "t2.micro"
