--- a/experimental/cloudstrapper/playbooks/roles/test-framework/vars/main.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/test-framework/vars/main.yaml
@@ -1,23 +1,40 @@
 ---
+clusterUuid: testclusteruuid
+testClusterStacks:
+  - agw0
+  - agw1
+testClusterStacksMax:
+  - agw0
+  - agw1
+  - agw2
+  - agw3
+  - agw4
+  - agw5
+  - agw6
+  - agw7
+  - agw8
+  - agw9
+  - agw10
+  - agw11
+  - agw12
+  - agw13
+  - agw14
+  - agw15
+  - agw16
+  - agw17
+  - agw18
+  - agw19
+  - agw20
+  - agw21
+  - agw22
+  - agw23
+  - agw24
 
 servicesMagma:
   - magma@magmad.service
 
 servicesMagmaWildCard:
   - magma@*
-
-servicesMagmaAll:
-  - magma@control_proxy.service
-  - magma@magmad.service
-  - magma@pipelined.service
-  - magma@sessiond.service
-  - magma@dnsd.service
-  - magma@mme.service
-  - magma@redirectd.service
-  - magma@td-agent-bit.service
-  - magma@lighttpd.service
-  - magma@mobilityd.service
-  - magma@redis.service
 
 agwCertsPath: /var/opt/magma/tmp/certs/
 agwConfigPath: /var/opt/magma/configs
