Add skeleton for nas conversion test
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/lte/gateway/c/oai/test/CMakeLists.txt
+++ b/lte/gateway/c/oai/test/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(mme_app_task)
 add_subdirectory(mobility_client)
 add_subdirectory(openflow)
 add_subdirectory(spgw_task)
+add_subdirectory(nas_task)
