[codeowners] Move entire-org to maintainers
Signed-off-by: Hunter Gatewood <hgatewood@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -32,8 +32,8 @@ lte/gateway/python/magma/pipelined @koolzz @pshelar
 lte/gateway/python/integ_tests @ssanadhya @ulaskozat @ardzoht
 lte/gateway/Vagrantfile @mattymo @119Vik @tmdzk
 
-**/*.pb.go @magma/entire-org
-**/*_swaggergen.go @magma/entire-org
+**/*.pb.go @magma/repo-magma-maintain
+**/*_swaggergen.go @magma/repo-magma-maintain
 
 # xwf Magma integrations
 xwf/ @AyliD @aharonnovo @r-i-g
