--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -988,9 +988,9 @@ jobs:
             #ansible-playbook agw-provision.yaml -e "idSite=MenloPark" -e "idGw=AgwA" --tags createNet,createGw,attachIface
             #ansible-playbook agw-provision.yaml -e "idSite=MenloPark" -e "idGw=AgwB" --tags createGw,attachIface
             #ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
-            ansible-playbook build-provision.yaml --tags devopsAgw,inventory  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
-            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
-            ansible-playbook ami-init.yaml  -e "awsAccessKey: $AWS_FB_CRED" -e "awsSecretKey: $AWS_FB_SECRET"
+            ansible-playbook build-provision.yaml --tags devopsAgw,inventory -e "dirLocalInventory=~/magma-experimental/files"
+            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"  -e "dirLocalInventory=~/magma-experimental/files"
+            ansible-playbook ami-init.yaml
 #      - magma_slack_notify
 
   ## CWF OPERATOR
