--- a/experimental/cloudstrapper/playbooks/roles/vars/defaults.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/defaults.yaml
@@ -7,8 +7,8 @@
 
 secgroupDefault: secgroupMagmaProto
 bucketDefault: lte-agw-aws
-keyBoot: keyMagmaBoot
-keyHost: keyMagmaHost
+keyBoot: agwmpBoot
+keyHost: agwmpHost
 
 devOpsCloudstrapper: ec2MagmaDevopsCloudstrapper
 primaryCloudstrapper: ec2MagmaCloudstrapper
