--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -982,7 +982,7 @@ jobs:
             sed -i -e "s/AWS_ACCESS_KEY_ID/${AWS_FB_CRED}/g" ~/magma-experimental/files/secrets.yaml
             sed -i -e "s@AWS_SECRET_ACCESS_KEY@${AWS_FB_SECRET}@g" ~/magma-experimental/files/secrets.yaml
             sed -i -e "s/agwmpBoot1/AGWBOOT${CIRCLE_BUILD_NUM}/g" ~/magma-experimental/roles/vars/defaults.yaml
-            echo "$(printenv CIRCLE_SHA1)">> ~/magma-experimental/files/AGWBOOT${CIRCLE_BUILD_NUM}.pem
+            #echo "$(printenv CIRCLE_SHA1)">> ~/magma-experimental/files/AGWBOOT${CIRCLE_BUILD_NUM}.pem
             sed -i -e "s/agwmpHost1/AGWHOST${CIRCLE_BUILD_NUM}/g" ~/magma-experimental/roles/vars/defaults.yaml
             #echo "$(printenv CIRCLE_BUILD_NUM)">> ~/magma-experimental/files/AGWHOST${CIRCLE_BUILD_NUM}.pem
             ansible-playbook aws-prerequisites.yaml -e "dirLocalInventory=~/magma-experimental/files" --tags keyCreate
