[DevExp] Filter some cpplint finding types
Signed-off-by: Scott Harrison Moeller <smoeller@fb.com>

--- a/.github/workflows/cpplint.yml
+++ b/.github/workflows/cpplint.yml
@@ -43,5 +43,6 @@ jobs:
         run: |
           cpplint --recursive ${{ github.workspace }} \
             --extensions=hh,c,hpp,cpp,cuh,cc,cxx,c++,hxx,h,h++,cu \
+            --filter=build/include_subdir,build/c++11 \
             --linelength=120 2>&1 \
              | ./reviewdog -efm="%f:%l: %m" -name="cpplint" -reporter="github-pr-review" -level="warning"
