[MME][DOCKER] Missing label and port expose on some dockerfiles
Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

--- a/lte/gateway/docker/mme/Dockerfile.ubuntu18.04
+++ b/lte/gateway/docker/mme/Dockerfile.ubuntu18.04
@@ -400,5 +400,11 @@ RUN sed -i -e "s@echo_error@echo@" -e "s@echo_success@echo@" -e "s@echo_warning@
 WORKDIR /magma-mme
 RUN openssl rand -out /root/.rnd 128
 
+# use this label for CI purpose
+LABEL use-separate-hss-realm="true"
+
+# expose ports
+EXPOSE 3870/tcp 5870/tcp 2123/udp
+
 # For the moment, let have a dummy command
 CMD ["sleep", "infinity"]
